objects/blng__InvoiceLine__c.object
<CustomObject>
    <description>The line items on Invoices, such as products etc.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__ARStatus__c</fullName>
        <label>AR Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceARStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__AllocatedRevenueAmount__c</fullName>
        <label>Revenue Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The item related to the invoice line.</description>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>AssetInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Balance__c</fullName>
        <formula>blng__TotalAmount__c - blng__Payments__c - blng__Credits__c + blng__Debits__c + blng__NegativeLineConversion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount (with tax) - Payments - Credits + Debits + Negative Line Conversion</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BalancewithoutDebits__c</fullName>
        <formula>blng__TotalAmount__c - blng__PaymentsAgainstInvoiceLines__c + blng__RefundsAgainstInvoiceLines__c - blng__Credits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance without Debits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyAmount__c</fullName>
        <label>Base Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXDate__c</fullName>
        <label>Base Currency FX Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXRate__c</fullName>
        <label>Base Currency FX Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrency__c</fullName>
        <label>Base Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinanceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>BillingFinanceBookInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinancePeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>BillingFinancePeriodInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingFrequency__c</fullName>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__BillingGLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Invoice Lines (Billing GL Rule)</relationshipLabel>
        <relationshipName>BillingGLRuleInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingGLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>BillingGLTreatmentInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Rule</label>
        <referenceTo>blng__BillingRule__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>BillingRuleInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Transaction</label>
        <referenceTo>blng__BillingTransaction__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>InvoiceLinesBillingTransaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Treatment</label>
        <referenceTo>blng__BillingTreatment__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>BillingTreatmentInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__CalculatedQuantity__c</fullName>
        <description>This indicates the actual number of times the charge is being applied for the line. If you bill a monthly invoice for 45 days this value will be 1.5</description>
        <inlineHelpText>This indicates the actual number of times the charge is being applied for the line. If you bill a monthly invoice for 45 days this value will be 1.5</inlineHelpText>
        <label>Calculated Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__ChargeDate__c</fullName>
        <description>This is the date on which Invoice Line is Created</description>
        <label>Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__ChargeType__c</fullName>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__ConvertedCreditNoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converted Credit Note Line</label>
        <referenceTo>blng__CreditNoteLine__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Credits__c</fullName>
        <inlineHelpText>Net of allocations and canceled allocations for credit notes</inlineHelpText>
        <label>Credits</label>
        <summarizedField>blng__CreditNoteAllocation__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__CreditNoteAllocation__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>blng__CreditNoteAllocation__c.blng__Unallocated__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__CreditNoteAllocation__c.blng__InvoiceLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__DaysPastDue__c</fullName>
        <description>The number of days since the invoice line’s due date.</description>
        <formula>blng__Invoice__r.blng__DaysOutstanding__c</formula>
        <label>Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__DebitPayments__c</fullName>
        <formula>blng__PaymentsAgainstDebitNoteLines__c - blng__RefundsAgainstDebitNoteLines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debit Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__DebitsPaymentAllocations__c</fullName>
        <label>Debits (Payment Allocations)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__DebitsPaymentUnallocations__c</fullName>
        <label>Debits (Payment Unallocations)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Debits__c</fullName>
        <inlineHelpText>Net of allocations and canceled allocations for debit notes</inlineHelpText>
        <label>Debits</label>
        <summarizedField>blng__DebitNoteAllocation__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__DebitNoteAllocation__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>blng__DebitNoteAllocation__c.blng__Unallocated__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__DebitNoteAllocation__c.blng__InvoiceLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__DueDate__c</fullName>
        <description>The date by which invoice payments are expected to be received.</description>
        <formula>blng__Invoice__r.blng__DueDate__c</formula>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__EndDate__c</fullName>
        <description>The ending date for the period of calculation of this charge. Applicable only to Recurring Charges.</description>
        <inlineHelpText>The last day of the billing period.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__GroupedQuantity__c</fullName>
        <label>Grouped Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__ImpactAmount__c</fullName>
        <formula>blng__TotalAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLineState__c</fullName>
        <label>Invoice Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceState</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__InvoiceLineStatus__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__InvoiceRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Run</label>
        <referenceTo>blng__InvoiceRun__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>InvoiceRunInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>blng__Invoice__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>InvoiceInvoiceLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntityReference__c</fullName>
        <externalId>true</externalId>
        <label>LegalEntityReference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>LegalEntityInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__NegativeLineConversion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Negative Line Conversion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__NetAllocationsAgainstInvoiceLines__c</fullName>
        <formula>blng__PaymentsAgainstInvoiceLines__c  +  blng__RefundsAgainstInvoiceLines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Allocations Against Invoice Lines</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>OrderProductInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__OverrideInitialRevenueEndDate__c</fullName>
        <label>Override Initial Revenue End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__OverrideInitialRevenueStartDate__c</fullName>
        <label>Override Initial Revenue Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__PaymentsAgainstDebitNoteLines__c</fullName>
        <label>Allocations Against Debit Note Lines</label>
        <summarizedField>blng__DebitNoteAllocation__c.blng__Payments__c</summarizedField>
        <summaryFilterItems>
            <field>blng__DebitNoteAllocation__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__DebitNoteAllocation__c.blng__InvoiceLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__PaymentsAgainstInvoiceLines__c</fullName>
        <label>Allocations Against Invoice Lines</label>
        <summarizedField>blng__PaymentAllocationInvoiceLine__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__PaymentAllocationInvoiceLine__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__PaymentAllocationInvoiceLine__c.blng__InvoiceLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Payments__c</fullName>
        <formula>blng__PaymentsAgainstDebitNoteLines__c + blng__PaymentsAgainstInvoiceLines__c -  blng__RefundsAgainstDebitNoteLines__c - blng__RefundsAgainstInvoiceLines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net payments. All Payments less refunds.</inlineHelpText>
        <label>Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>InvoiceLinesProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__RefundsAgainstDebitNoteLines__c</fullName>
        <label>Unallocations Against Debit Note Lines</label>
        <summarizedField>blng__DebitNoteAllocation__c.blng__Refunds__c</summarizedField>
        <summaryFilterItems>
            <field>blng__DebitNoteAllocation__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__DebitNoteAllocation__c.blng__InvoiceLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__RefundsAgainstInvoiceLines__c</fullName>
        <label>Unallocations Against Invoice Lines</label>
        <summarizedField>blng__PaymentAllocationInvoiceLine__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__PaymentAllocationInvoiceLine__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Unallocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__PaymentAllocationInvoiceLine__c.blng__InvoiceLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__RevenueExpectedAmount__c</fullName>
        <label>Revenue Expected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueLiabilityAmount__c</fullName>
        <label>Revenue Liability Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueMostLikelyAmount__c</fullName>
        <label>Revenue Most Likely Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueScheduleStatus__c</fullName>
        <label>Revenue Schedule Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__RevenueScheduleStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__StartDate__c</fullName>
        <description>The starting date for the period of calculation of this charge. Applicable only to Recurring Charges.</description>
        <inlineHelpText>The first day of the billing period.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__Subtotal__c</fullName>
        <inlineHelpText>Invoice Line total (before taxes).</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TaxAmount__c</fullName>
        <inlineHelpText>Sum of all taxes for this invoice line</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TaxCity__c</fullName>
        <inlineHelpText>For use in tax calculations. Destination city for this product.</inlineHelpText>
        <label>Tax City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxCountry__c</fullName>
        <inlineHelpText>For use in tax calculations. Destination Country for this product.</inlineHelpText>
        <label>Tax Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxCounty__c</fullName>
        <label>Tax County (Override)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxErrorMessage__c</fullName>
        <label>Tax Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxError__c</fullName>
        <formula>IF(ISPICKVAL(blng__TaxStatus__c,&quot;Error&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Error</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__TaxGLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>TaxGLRuleInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxGLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Invoice Lines (Tax GL Treatment)</relationshipLabel>
        <relationshipName>TaxGLTreatmentInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxLocationCode__c</fullName>
        <label>Tax Location Code (Override)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxPercentageApplied__c</fullName>
        <label>Tax Percentage Applied</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>blng__TaxRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Rule</label>
        <referenceTo>blng__TaxRule__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>TaxRuleInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxState__c</fullName>
        <inlineHelpText>For use in tax calculations. Destination State for this product.</inlineHelpText>
        <label>Tax State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxStatus__c</fullName>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__LineTaxStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TaxStreet2__c</fullName>
        <label>Tax Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxStreet__c</fullName>
        <inlineHelpText>For use in tax calculations. Destination Street Address for this product.</inlineHelpText>
        <label>Tax Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Treatment</label>
        <referenceTo>blng__TaxTreatment__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>TaxTreatmentInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxZipCode__c</fullName>
        <inlineHelpText>For use in tax calculations. Destination ZIP Code/Postal Code for this product.</inlineHelpText>
        <label>Tax Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TotalAmount__c</fullName>
        <inlineHelpText>SubTotal + Tax</inlineHelpText>
        <label>Total Amount (With Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>225</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UsageSummary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usage Summary</label>
        <referenceTo>blng__UsageSummary__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>UsageSummaryInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice Line</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__TotalAmount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>